<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Hangman
    </string>

    <!-- settings & preferences -->
    <string name="hi_scores" >hi-scores
    </string>
    <string name="settings" >settings
    </string>
    <string name="reset" >reset game
    </string>

    <string name="title_user_name" >user name
    </string>
    <string name="title_word_length">word length
    </string>
    <string name="title_amount_of_turns">amount of turns
    </string>

    <string name="summary_user_name">set your user name here
    </string>
    <string name="summary_word_length">set the length of the words that you want to use
    </string>
    <string name="summary_amount_of_turns">set the amount of turns until you lose
    </string>

    <string name="dialog_user_name" >user name:
    </string>
    <string name="dialog_word_length">word length:
    </string>
    <string name="dialog_amount_of_turns">amount of turns:
    </string>

    <!-- game ui -->
    <string name="current_word" >current word
    </string>
    <string name="current_word_state" >current word state
    </string>
    <string name="used_letters" >used letters
    </string>
    <string name="computer_dialogue">computer dialogue</string>

    <!-- game states -->
    <string name="game_won">game won
    </string>
    <string name="game_lost">game lost
    </string>

    <!-- computer monologue -->
    <string name="cmonologue_start">Pick a letter to start playing</string>
    <string name="cmonologue_used">This letter has already been used, try again</string>
    <string name="cmonologue_invalid">WHAT THE HELL IS THAT!?, try another one</string>
    <string name="cmonologue_wrong">Wrong guess, pick again</string>
    <string name="cmonologue_correct">Lucky, why don\'t you try again?</string>
    <string name="cmonologue_won">:((</string>
    <string name="cmonologue_lost">:-)</string>
</resources>
